--- a/Tema 15/actividades/holaMundoRoute/src/app/home/home.component.html
+++ b/Tema 15/actividades/holaMundoRoute/src/app/home/home.component.html
@@ -1,8 +1,17 @@
-<h2>Home</h2>
-<nav>
+<h1 class="titulo">Amazonia</h1>
+<div class="imagenPortada">
+  <img src="./../../assets/portadaIMG.jpg" alt="">
+</div>
+<div class="textoPortada">
+  <h2>Amazonia - Tu Destino para el Mundo de los Videojuegos</h2>
+  <p>En Amazonia, nos enorgullece ofrecerte la mejor selección de hardware y software para tu placer en el mundo 
+    de los videojuegos. Nuestra tienda online está diseñada para proporcionarte una experiencia de compra excepcional, 
+    con detalles meticulosos y accesibilidad en cada producto que ofrecemos.</p>
+  <br>
+  <h2>Productos Destacados</h2>
   <ul>
-    <li><a routerLink="child-a">Child A</a></li>
-    <li><a routerLink="child-b">Child B</a></li>
-  </ul>
-</nav>
-<router-outlet></router-outlet>
+      <li>Consolas de Última Generación: Descubre las consolas más potentes y con las últimas tecnologías en gráficos y rendimiento. Explora desde la PlayStation 5 hasta la Xbox Series X, con una variedad de opciones para todos los gustos.</li>
+      <li>Accesorios de Calidad: Elevá tu experiencia de juego con nuestra amplia gama de accesorios, desde auriculares inalámbricos de alta calidad hasta controles personalizados.</li>
+      <li>Software y Juegos: No te pierdas los lanzamientos más esperados. Amazonia ofrece acceso anticipado a juegos exclusivos y promociones especiales, asegurando que siempre estés a la vanguardia.</li>
+    </ul>
+</div>
