--- a/Tema 15/actividades/holaMundoRoute/src/app/pagenotfound/pagenotfound.component.html
+++ b/Tema 15/actividades/holaMundoRoute/src/app/pagenotfound/pagenotfound.component.html
@@ -1,1 +1,6 @@
-<p>pagenotfound works!</p>
+<div class="container">
+  <div class="text">
+    <h1>Error 404</h1>
+    <p>Lo sentimos, pero la página que estás buscando no se encontró.</p>
+  </div>
+</div>
