--- a/Tema 15/actividades/holaMundoRoute/src/app/productos/productos.component.html
+++ b/Tema 15/actividades/holaMundoRoute/src/app/productos/productos.component.html
@@ -1,11 +1,12 @@
-<mat-grid-list cols="3" rowHeight="500px">
+<br>
+<mat-grid-list cols="3" rowHeight="550px">
     <mat-grid-tile>
         <mat-card class="example-card">
             <mat-card-header>
               <mat-card-title>PlayStation 5</mat-card-title>
               <mat-card-subtitle>Videoconsola + Videojuego </mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="./../../assets/ps5.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="./../../assets/ps5.jpg" alt="Videoconsola Sony PlayStation 5">
             <mat-card-content>
               <p>
                 Obtén el paquete PlayStation 5 + Horizon Forbidden West y únete a Aloy mientras se enfrenta a una nueva y peligrosa frontera en PS5.
@@ -20,7 +21,7 @@
               <mat-card-title>Xbox Series X</mat-card-title>
               <mat-card-subtitle>Incluye videoconsola + mando</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="./../../assets/xboxSeriesX.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="./../../assets/xboxSeriesX.jpg" alt="videoconsola xboxSeriesX">
             <mat-card-content>
               <p>
                 La Xbox Series X es una consola de videojuegos de alta gama desarrollada por Microsoft, que se caracteriza por su potente procesador, tecnología de trazado de rayos, y capacidades de refrigeración avanzadas. Con 12 teraflops de potencia de procesamiento gráfico, la Xbox Series X es capaz de ofrecer gráficos impresionantes y una experiencia de juego fluida.
@@ -31,16 +32,13 @@
     <mat-grid-tile>
         <mat-card class="example-card">
             <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>Shiba Inu</mat-card-title>
-              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+              <mat-card-title>Nintendo Switch</mat-card-title>
+              <mat-card-subtitle>Edición Zelda BotW</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="./../../assets/nintendoSwitch.jpg" alt="videoconsola Nintendo Switch">
             <mat-card-content>
               <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
+                La nueva Nintendo Switch – Modelo OLED (edición The Legend of Zelda: Tears of the Kingdom), con un diseño especial inspirado en The Legend of Zelda: Tears of the Kingdom. Esta flamante edición cuenta con un diseño que aparece en The Legend of Zelda: Tears of the Kingdom, incluyendo el conocido símbolo hyliano de la saga The Legend of Zelda en la cara frontal de la base de la consola.
               </p>
             </mat-card-content>
         </mat-card>
@@ -48,16 +46,13 @@
     <mat-grid-tile>
         <mat-card class="example-card">
             <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>Shiba Inu</mat-card-title>
-              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+              <mat-card-title>Meta Quest 3</mat-card-title>
+              <mat-card-subtitle>Version 128 Gb</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="./../../assets/metaQuest3.jpg" alt="Gafas de RV - Meta Quest 3">
             <mat-card-content>
               <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
+                Amplía tu mundo con las Meta Quest 3 de 128 GB, unas gafas de realidad mixta que te permiten una inmersión completa o mezclar los mundos físico y virtual para transformar tu hogar en algo muy distinto. Totalmente rediseñadas, son nuestras gafas más potentes hasta ahora. Con más de 500 juegos y experiencias inmersivos de la mejor biblioteca del mundo, siempre hay algo nuevo por descubrir.
               </p>
             </mat-card-content>
         </mat-card>
@@ -65,16 +60,15 @@
     <mat-grid-tile>
         <mat-card class="example-card">
             <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>Shiba Inu</mat-card-title>
-              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+              <mat-card-title>Asus ROG Ally Z1</mat-card-title>
+              <mat-card-subtitle>Videoconsola + 3 meses GamePass</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="./../../assets/AsusROGAlly.jpg" alt="Asus ROG Ally Z1 Extreme">
             <mat-card-content>
               <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
+                Un mundo gaming en tus manos con ASUS ROG Ally. Sumérgete de lleno en tus juegos AAA o indie favoritos y deja que el tiempo vuele gracias a una amplia pantalla Full HD de 120 Hz y una ergonomía increíblemente cómoda.
+
+Sistema de entretenimiento para toda la casa. Para compartir la diversión, conecta la consola a un televisor, empareja varios mandos y transforma al instante la Ally en un dispositivo gaming.
               </p>
             </mat-card-content>
         </mat-card>
@@ -82,18 +76,16 @@
     <mat-grid-tile>
         <mat-card class="example-card">
             <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>Shiba Inu</mat-card-title>
-              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+              <mat-card-title>God of War Ragnarök</mat-card-title>
+              <mat-card-subtitle>Videojuego de PlayStation 4</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="./../../assets/GOW-Ragnarok.jpg" alt="Caratula de God of War Ragnarök ">
             <mat-card-content>
               <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
+                De la mano de Santa Monica Studio llega la secuela del aclamado God of War (2018). Kratos y Atreus deben viajar a cada uno de los Nueve Reinos en busca de respuestas mientras las fuerzas asgardianas se preparan para la batalla profetizada que supondrá el fin del mundo. Por el camino, explorarán paisajes míticos increíbles y se enfrentarán a temibles enemigos, como monstruos y dioses nórdicos.
               </p>
             </mat-card-content>
         </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
+  <br><br>
