--- a/Tema 15/actividades/holaMundoRoute/src/app/contacto/contacto.component.css
+++ b/Tema 15/actividades/holaMundoRoute/src/app/contacto/contacto.component.css
@@ -1,13 +1,11 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
-  
-  td {
-    padding-right: 8px;
-  }
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 100px;
+ }
+ .boton{
+  text-align: center;
+
+ }
