Decoradores IN/OUTPUT

--- a/Tema 15/ejemplos/ngBootPrime/src/app/app.component.html
+++ b/Tema 15/ejemplos/ngBootPrime/src/app/app.component.html
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 	</div>
-	<div ngbAccordionItem [disabled]="false">
+	<div ngbAccordionItem [disabled]="true">
 		<h2 ngbAccordionHeader>
 			<button ngbAccordionButton>Disabled</button>
 		</h2>
